--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -2,5 +2,5 @@
 layout: default
 ---
 <h1 class="page-title">{{ page.title }}</h1>
-<p class="audit-tags">Author: {{ page.author }} | Created On: {{ page.created_date }} | Edited On: {{ page.modified_last }}</p>
+<p class="audit-tags">Author: {{ page.author }} | Created On: {{ page.created_date }} {% if page.revdate %} | Revised:  {{ page.revdate }} {% endif %}</p>
 {{ content }}
