Adding JetBrains post, adding images to gitignore, removed the css override for the anchor class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="/assets/css/styles.css">
   </head>
   <body>
-    {% include navigation.html %}
-    {{ content }}
+    <div class="body">
+      {% include navigation.html %}
+      {{ content }}
+    </div>
   </body>
 </html>
