Adding lanyon theme as the base line and customize from there

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<div>
+<div class="page">
     <h1 class="page-title">{{ page.title }}</h1>
-    <span class="post-date">{% include page-info.html %}</span>
     {{ content }}
 </div>
