--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,32 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
-  </head>
-  <body>
-    <div class="body">
-      {% include navigation.html %}
-      {{ content }}
+<!DOCTYPE html>
+<html lang="en-us">
+
+{% include head.html %}
+
+<body class="theme-base-0b">
+
+{% include sidebar.html %}
+
+
+<!-- Wrap is the content to shift when toggling the sidebar. We wrap the
+     content to avoid any CSS collisions with our real content. -->
+<div class="wrap">
+  <div class="masthead">
+    <div class="container">
+      <h3 class="masthead-title">
+        <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
+        <small>{{ site.tagline }}</small>
+      </h3>
     </div>
-  </body>
+  </div>
+
+  <div class="container content">
+    {{ content }}
+  </div>
+</div>
+
+<label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+<script src='{{ site.baseurl }}/public/js/script.js'></script>
+</body>
 </html>
