--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,27 @@
 ---
 layout: default
 ---
-<h1 class="page-title">{{ page.title }}</h1>
-<p class="audit-tags">{{ page.date | date_to_string }} | {{ page.author }} {% if page.revdate %} | Revised:  {{ page.revdate }} {% endif %}</p>
 
-    <!-- Main Blog Content -->
-    <div class="large-9 columns" role="content">
-        {{ content }}
-    </div>
+<div class="post">
+    <h1 class="post-title">{{ page.title }}</h1>
+    <span class="post-date">{% include page-info.html %}</span>
+    {{ content }}
+</div>
 
-    <!-- End Main Content -->
-
-    <!-- Sidebar -->
-
-    <aside class="large-3 columns">
-        <h4>Posts</h4>
-        <ul id="posts" class="posts nav">
-            {% for post in site.posts limit: 5 %}
-            <li><a href="{{ post.url }}">{{ post.navtitle }}</a></li>
-            {% endfor %}
-        </ul>
-    </aside>
-
-    <!-- End Sidebar -->
+{% if site.related_posts.size >= 1 %}
+<div class="related">
+    <h2>Related posts</h2>
+    <ul class="related-posts">
+        {% for post in site.related_posts limit:3 %}
+        <li>
+            <h3>
+                <a href="{{ site.baseurl }}{{ post.url }}">
+                    {{ post.title }}
+                    <small>{{ post.date | date_to_string }}</small>
+                </a>
+            </h3>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+{% endif %}
