adding the tag support and tag generation for all pages, custom tag pages for all but the archive and the related posts only works for posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,11 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 
+    <!--  Execute collecttags before it is used  -->
+    {% if site.tags != "" %}
+        {% include collect-tags.html %}
+    {% endif %}
+
     <title>
         {% if page.title == "Home" %}
         {{ site.title }} &middot; {{ site.tagline }}
