--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -5,5 +5,8 @@ layout: default
 <div>
     <h1 class="page-title">{{ page.title }}</h1>
     <span class="post-date">{% include page-info.html %}</span>
-    {{ content }}
+    <span>{% include add-tags.html %}</span>
+    <div style="margin-top: 1rem">
+        {{ content }}
+    </div>
 </div>
