--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -5,7 +5,10 @@ layout: default
 <div class="post">
     <h1 class="post-title">{{ page.title }}</h1>
     <span class="post-date">{% include page-info.html %}</span>
-    {{ content }}
+    <span>{% include add-tags.html %}</span>
+    <div style="margin-top: 1rem">
+        {{ content }}
+    </div>
 </div>
 
 {% if site.related_posts.size >= 1 %}
