Conver readme to adoc and includes instructions about Kroki local set up and usage

--- a/_includes/add-tags.html
+++ b/_includes/add-tags.html
@@ -2,7 +2,7 @@
     [
       {% for tag in page.tags %}
         {% capture tag_name %}{{ tag }}{% endcapture %}
-        <a href="/tags/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a>
+        <a href="/tags/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code></a>
       {% endfor %}
     ]
 </span>
