--- a/_includes/collect-tags.html
+++ b/_includes/collect-tags.html
@@ -7,7 +7,7 @@ The following part extracts all the tags from your posts and sort tags, so that 
 
 {% assign rawtags = "" %}
 
-{% for post in site.posts %}
+{% for post in site.documents %}
     {% assign ttags = post.tags | join:'|' | append:'|' %}
     {% assign rawtags = rawtags | append:ttags %}
 {% endfor %}
