--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,10 +26,12 @@
     <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ '/public/apple-touch-icon-precomposed.png' | absolute_url }}">
-    <link rel="shortcut icon" href="{{ '/public/favicon.ico' | absolute_url }}">
-
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/public/images/apple-touch-icon.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/public/images/favicon-32x32.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/public/images/favicon-16x16.png' | absolute_url }}">
+    <link rel="manifest" href="{{ '/public/images/site.webmanifest' | absolute_url }}">
 
     {% if site.google_analytics_id %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
