--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="{{ '/public/css/poole.css' | absolute_url }}">
     <link rel="stylesheet" href="{{ '/public/css/syntax.css' | absolute_url }}">
     <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}">
+    <link rel="stylesheet" href="{{ '/public/font-awesome/css/fontawesome.min.css' | absolute_url }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
@@ -44,4 +45,6 @@
         gtag('config', '{{ site.google_analytics_id }}');
     </script>
     {% endif %}
+
+    {% seo %}
 </head>
