--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,25 @@
         {% endfor %}
 
         <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
+
+        <!-- social buttons -->
+        {% if site.twitter_username %}
+        <a href="https://twitter.com/{{ site.twitter_username }}" target="_blank" rel="noopener" style="text-decoration:none" title="Isuru @ Twitter">
+            <i class="fab fa-twitter"></i>
+        </a>
+        {% endif %}
+
+        {% if site.github_username %}
+        <a href="https://github.com/{{site.github_username}}" target="_blank" rel="noopener" style="text-decoration:none" title="Isuru @ GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+        {% endif %}
+
+        {% if site.linkedin_username %}
+        <a href="https://linkedin.com/in/{{ site.linkedin_username }}" target="_blank" rel="noopener" style="text-decoration:none" title="Isuru @ LinkedIn">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        {% endif %}
     </nav>
 
     <div class="sidebar-item">
