updating image directory

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,10 +29,10 @@
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/public/images/apple-touch-icon.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/public/images/favicon-32x32.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/public/images/favicon-16x16.png' | absolute_url }}">
-    <link rel="manifest" href="{{ '/public/images/site.webmanifest' | absolute_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/public/imgs/apple-touch-icon.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/public/imgs/favicon-32x32.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/public/imgs/favicon-16x16.png' | absolute_url }}">
+    <link rel="manifest" href="{{ '/public/imgs/site.webmanifest' | absolute_url }}">
 
     {% if site.google_analytics_id %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
