--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,14 +24,15 @@
     <link rel="stylesheet" href="{{ '/public/css/poole.css' | absolute_url }}">
     <link rel="stylesheet" href="{{ '/public/css/syntax.css' | absolute_url }}">
     <link rel="stylesheet" href="{{ '/public/css/lanyon.css' | absolute_url }}">
+    <link rel="stylesheet" href="{{ '/public/font-awesome/css/all.min.css' | absolute_url }}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
 
     <link rel="alternate" type="application/rss+xml" title="RSS" href="{{ '/atom.xml' | absolute_url }}">
 
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/public/images/apple-touch-icon.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/public/images/favicon-32x32.png' | absolute_url }}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/public/images/favicon-16x16.png' | absolute_url }}">
-    <link rel="manifest" href="{{ '/public/images/site.webmanifest' | absolute_url }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ '/public/imgs/apple-touch-icon.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ '/public/imgs/favicon-32x32.png' | absolute_url }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ '/public/imgs/favicon-16x16.png' | absolute_url }}">
+    <link rel="manifest" href="{{ '/public/imgs/site.webmanifest' | absolute_url }}">
 
     {% if site.google_analytics_id %}
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -44,4 +45,6 @@
         gtag('config', '{{ site.google_analytics_id }}');
     </script>
     {% endif %}
+
+    {% seo %}
 </head>
