Tag cloud is now included all the tags and none _post douments are inluded in the tag page

--- a/_includes/collect-tags.html
+++ b/_includes/collect-tags.html
@@ -1,3 +1,4 @@
+<!-- Reference:: https://codinfox.github.io/dev/2015/03/06/use-tags-and-categories-in-your-jekyll-based-github-pages/ -->
 {% comment %}
 =======================
 The following part extracts all the tags from your posts and sort tags, so that you do not need to manually collect your tags to a place.
@@ -16,7 +17,7 @@ The following part extracts all the tags from your posts and sort tags, so that 
 
 {% comment %}
 =======================
-The following part removes dulpicated tags and invalid tags like blank tag.
+The following part removes duplicated tags and invalid tags like blank tag.
 =======================
 {% endcomment %}
 
