commit after long time

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,14 @@
       </h3>
     </div>
   </div>
-
+  
   <div class="container content">
     {{ content }}
   </div>
 </div>
 
+
+{% include cookie-consent.html %}
 <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
 <script src='{{ site.baseurl }}/public/js/script.js'></script>
